--- a/templates/courses.html
+++ b/templates/courses.html
@@ -152,7 +152,19 @@
                     </div>
                 {% endif %}
                 <div class="p-4">
-                    <h2 class="text-xl font-semibold text-gray-800">{{ course.title }}</h2>
+
+                    {#                    <h2 class="text-xl font-semibold text-gray-800 ">{{ course.title }}</h2>#}
+                    <h2 class="text-xl font-semibold text-gray-800 text-center">
+                        {{ course.title }}
+                    </h2>
+                    <hr class="mt-3 border-t-2 border-gray-400">
+
+
+                    <!--показване на среден рейтинг -->
+                    <p class="text-yellow-600 font-semibold mt-4 mb-4">
+                        ⭐ Среден рейтинг: {{ course.average_rating|default:"Няма рейтинг" }} / 5
+                    </p>
+
                     <p class="text-gray-600 mt-2">{{ course.description|truncatechars:100 }}</p>
                     <p class="mt-4 text-blue-600 font-bold">{{ course.price }} лв.</p>
                     <a href="{% url 'course_detail' course.id %}"
